# Django-Pydantic-TTD

./: .env.example  .gitignore  README.md  backend.dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
config/: config.py  settings.py  urls.py
reservation_system/: apps.py  manager.py  models.py
reservation_system/api/api_v1/: api.py
reservation_system/api/api_v1/controllers/: listing.py  owner.py  reservation.py  room.py
reservation_system/cruds/: base.py  listing.py  owner.py  reservation.py  room.py
reservation_system/exceptions/: exceptions.py
reservation_system/migrations/: 0001_initial.py  0002_owner_rename_end_time_reservation_check_in_and_more.py  0003_remove_room_is_available.py
reservation_system/models/: __init__.py  base.py  listing.py  owner.py  reservation.py  room.py
reservation_system/schemas/: listing.py  owner.py  reservation.py  room.py
tests/: conftest.py
tests/listing/: e2e_tests.py  test_models.py
tests/owner/: e2e_tests.py
tests/reservation_system/: e2e_tests.py  test_models.py
tests/room/: e2e_tests.py
